--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
 			"name": "Heyday Developers",
 			"email": "dev@heyday.co.nz",
 			"role": "Developer"
+		},
+		{
+			"name": "Bruno Igreja",
+			"email": "bigreja@sapo.pt",
+			"role": "Developer"
 		}
+
 	],
 	"require": {
 		"silverstripe/framework": "^4.5.0",
