Revert "Revert "Update composer.json""
This reverts commit 586e864ea9ebe9a1d6c84a6649c0f16ab2121a22.

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
 			"name": "Heyday Developers",
 			"email": "dev@heyday.co.nz",
 			"role": "Developer"
+		},
+		{
+			"name": "Bruno Igreja",
+			"email": "bigreja@sapo.pt",
+			"role": "Developer"
 		}
+
 	],
 	"autoload": {
 		"psr-4": {
