--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
 		}
 
 	],
+	"require": {
+		"symbiote/silverstripe-gridfieldextensions": "^3.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"Heyday\\MenuManager\\": "src/"
