--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
 
 	],
 	"require": {
+		"silverstripe/framework": "^4.5.0",
+		"silverstripe/vendor-plugin": "^1.0",
 		"symbiote/silverstripe-gridfieldextensions": "^3.0"
 	},
 	"autoload": {
