--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 
 	],
 	"require": {
-		"silverstripe/framework": "^4.5.0",
+       		"silverstripe/framework": "^4.0"
 		"silverstripe/vendor-plugin": "^1.0",
 		"symbiote/silverstripe-gridfieldextensions": "^3.0"
 	},
@@ -25,7 +25,5 @@
 		"psr-4": {
 			"Heyday\\MenuManager\\": "src/"
 		}
-	},
-	"minimum-stability": "dev",
-	"prefer-stable": true
+	}
 }
