--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
 
 	],
 	"require": {
-       		"silverstripe/framework": "^4.0",
-		"silverstripe/vendor-plugin": "^1.0",
-		"symbiote/silverstripe-gridfieldextensions": "^3.0"
+       		"silverstripe/framework": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
