--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
 
 	],
 	"require": {
+       		"silverstripe/framework": "^4.0",
+		"silverstripe/vendor-plugin": "^1.0",
+		"symbiote/silverstripe-gridfieldextensions": "^3.0"
 	},
 	"autoload": {
 		"psr-4": {
